# s4u-test-assignment

./: README.md  pyproject.toml
src/: manage.py
src/account/: models.py
src/account/fixtures/: 0001_account.json
src/account/migrations/: 0001_initial.py  0002_account_owner.py
src/customer/: models.py
src/customer/fixtures/: 0001_customer.json
src/customer/migrations/: 0001_initial.py
src/nanobank/: asgi.py  settings.py  urls.py  wsgi.py
src/scheduledpayment/: apps.py  models.py  tests.py
src/scheduledpayment/fixtures/: 0001_scheduled_payments.json
src/scheduledpayment/migrations/: 0001_initial.py
src/transfer/: models.py  tests.py
src/transfer/fixtures/: 0001_transfers.json
src/transfer/migrations/: 0001_initial.py
