[tool.poetry]
name = "nanobank"
version = "0.1.0"
description = "Grossly oversimplified, bug ridden banking system"
authors = ["Forex4you IT"]

[tool.poetry.dependencies]
python = ">=3.6"
Django = "^3.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
